--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </ul>
 <div class="jumbotron">
   <h1>Gedung Bhayangkara</h1>
-  <img src='gedung.jpg' width='500px' height='300px'>
+  <img src='images/gedung.jpg' width='500px' height='300px'>
   <h2>Website reservasi gedung Bhayangkara.</h2>
   <h5><em>Jln. Kenangan Indah no. 56, Jember</em></h5>
   <p><a class="btn btn-primary btn-lg" href="reservasi.html" role="button">Pesan Sekarang!!!</a></p>
