--- a/pembayaran.html
+++ b/pembayaran.html
@@ -109,7 +109,9 @@
 		</form>
 	</div>
 </div>
-<center>
+</div>
+	
+<center><br><br>
 <footer id='copyright'>
 <div id='copy'>
 Copyright &#169; 2017 Bhayangkara All Right Reserved
