--- a/pembayaran.html
+++ b/pembayaran.html
@@ -33,13 +33,7 @@
 						<input type="text" name="NamaLengkap" placeholder="Nama Lengkap" required="">
 						<input type="text" name="Alamat" placeholder="Alamat" required="">
 						<input type="email" name="Email" placeholder="Email" required="">
-						<select id="w3_agileits_select1" class="w3layouts_select" onchange="change_country(this.value)" required="">
-							<option value="">Pilih Paket--</option>
-							<option value="">Biasa</option>
-							<option value="">Jumbo</option> 
-							<option value="">Super Jumbo</option>						
-						</select>
-						<input type="text" name="Phone Number" placeholder="Phone Number" required="">
+						<input type="text" name="PhoneNumber" placeholder="Nomor HP" required="">
 						<textarea name="Message" placeholder="Comments..." required=""></textarea>
 					
 					</div>
