--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   <li role="presentation"><a href="contact.html">Contact</a></li>
   <li role="presentation" class="active"><a href="about.html">About</a></li>
 </ul>
-<div class="jumbotron">
+<div class="jumbotron">Test Commit
 </div>
 
 <center>
