--- a/reservasi.html
+++ b/reservasi.html
@@ -10,10 +10,10 @@
 <!-- for-mobile-apps -->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- //for-mobile-apps -->
 <!-- font-awesome icons -->
-<link href="css/font-awesome.css" rel="stylesheet"> 
+<link href="css/font-awesome.css" rel="stylesheet">
 <!-- //font-awesome icons -->
 <script src="js/jquery-2.1.4.min.js"></script>
 <!--Google Fonts-->
@@ -43,7 +43,7 @@
 						</div>
 						<div class="pricing-bottom-bottom">
 							<p><span>Konsumsi </span> Katering</p>
-							<p><span>Paket </span> Untuk 50 Orang</p>  
+							<p><span>Paket </span> Untuk 50 Orang</p>
 							<p><span>Pelayan </span> Acara</p>
 							<p><span>Keamanan </span> Luar</p>
 						</div>
@@ -51,7 +51,7 @@
 							<p>Rp<span>500k</span><br>/malam</p>
 						</div>
 						<div class="buy-button">
-							<a href="pembayaran.html">Bayar</a>
+							<a href="pembayaran.php">Bayar</a>
 						</div>
 					</div>
 				</div>
@@ -69,14 +69,14 @@
 						<div class="pricing-bottom-bottom blue-pricing-bottom-top">
 							<p><span>Konsumsi </span> Katering</p>
 							<p><span>Paket </span> Untuk 100 Orang</p>
-							<p><span>Pelayan </span> Lengkap</p>  
+							<p><span>Pelayan </span> Lengkap</p>
 							<p><span>Keamanan </span> Luar</p>
 						</div>
 						<div class="wthree-pricing-info blue-top">
 							<p>Rp.<span>850k</span><br>/malam</p>
 						</div>
 						<div class="buy-button">
-							<a href="pembayaran.html">Bayar</a>
+							<a href="pembayaran.php">Bayar</a>
 						</div>
 					</div>
 				</div>
@@ -94,14 +94,14 @@
 						<div class="pricing-bottom-bottom green-pricing-bottom-top">
 							<p><span>Konsumsi </span> dari Bhayangkara</p>
 							<p><span>Paket </span> Prasmanan Unlimited</p>
-							<p><span>Pelayan </span> Lengkap</p>  
+							<p><span>Pelayan </span> Lengkap</p>
 							<p><span>Keamanan </span> Dalam dan Luar</p>
 						</div>
 						<div class="wthree-pricing-info green-top">
 							<p>Rp.<span>1000k</span><br>/malam</p>
 						</div>
 						<div class="buy-button">
-							<a href="pembayaran.html">Bayar</a>
+							<a href="pembayaran.php">Bayar</a>
 						</div>
 					</div>
 				</div>
