--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Gedung Bhayangkara</title>
+<link rel="shortcut icon" href="images/icon.ico"/>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-
-<background-color:red>
 <div class="container">
 <ul class="nav nav-pills">
   <li role="presentation" class="active"><a href="index.html">Home</a></li>
-  <li role="presentation"><a href="contact.html">Contact</a></li>
-  <li role="presentation"><a href="about.html">About</a></li>
+  <li role="presentation" class="active"><a href="contact.html">Contact</a></li>
 </ul>
+<center>
 <div class="jumbotron">
   <h1>Gedung Bhayangkara</h1>
-  <img src='images/gedung.jpg' width='500px' height='300px'>
+  <img src='images/gedung.jpg' width='500px' height='300px'><br>
   <h2>Website reservasi gedung Bhayangkara.</h2>
-  <h5><em>Jln. Kenangan Indah no. 56, Jember</em></h5>
+  <h2>Jln. Kenangan Indah no. 56, Jember</h2>
   <p><a class="btn btn-primary btn-lg" href="reservasi.html" role="button">Pesan Sekarang!!!</a></p>
 </div>
 
