--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Gedung Bhayangkara</title>
+<link rel="shortcut icon" href="images/icon.ico"/>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+<!-- Custom Theme files -->
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
 </head>
 
 <body>
 <div class="container">
 <ul class="nav nav-pills">
-  <li role="presentation"><a href="index.html">Home</a></li>
+  <li role="presentation" class="active"><a href="index.html">Home</a></li>
   <li role="presentation" class="active"><a href="contact.html">Contact</a></li>
-  <li role="presentation"><a href="about.html">About</a></li>
 </ul>
 <div class="jumbotron">
 <address>
